--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
 @import '../scss/reset.scss';
 @import '../scss/header.scss';
-@import './mixin.scss'
+@import './mixin.scss';
+@import '../scss/menuBurger.scss'
