start building project section

--- a/src/scss/menuBurger.scss
+++ b/src/scss/menuBurger.scss
@@ -7,9 +7,7 @@
 .menuBurger{
   position: relative;
   height: 30%;
-  width: 0;
-  background-color: black;
-  z-index: 2;
+  width: 50%;
   top: 20px;
   left: 85%;
 
