--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import '../scss/reset.scss';
 @import '../scss/header.scss';
 @import './mixin.scss';
-@import '../scss/menuBurger.scss'
+@import '../scss/menuBurger.scss';
+@import '../scss/project.scss';
