--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -12,6 +12,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  cursor: pointer;
 
   &__card{
     height: 150px;
