--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -12,12 +12,45 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  cursor: pointer;
 
   &__card{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 150px;
     width: 300px;
-    background-color: rgb(231, 177, 61);
+    background-color: white;
+    box-shadow: 0px 0px 91px -50px rgba(0,0,0,0.75);
+    cursor: pointer;
+  }
+
+  &__title{
+    font-size: 1em;
+    font-family: sans-serif;
+    font-weight: 900;
+    color: rgb(49, 103, 155);
+  }
+
+  &__upper{
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+    &--img{
+      width: 25%;
+    }
+
+    &:hover{
+      opacity: 1;
+    }
   }
 }
 
